lib/GSL/Special/fermi_dirac.h

int gsl_sf_fermi_dirac_m1_e(double x,double* result);
double gsl_sf_fermi_dirac_m1(double x);
int gsl_sf_fermi_dirac_0_e(double x,double* result);
double gsl_sf_fermi_dirac_0(double x);
int gsl_sf_fermi_dirac_1_e(double x,double* result);
double gsl_sf_fermi_dirac_1(double x);
int gsl_sf_fermi_dirac_2_e(double x,double* result);
double gsl_sf_fermi_dirac_2(double x);
int gsl_sf_fermi_dirac_int_e(int j,double x,double* result);
double gsl_sf_fermi_dirac_int(int j,double x);
int gsl_sf_fermi_dirac_mhalf_e(double x,double* result);
double gsl_sf_fermi_dirac_mhalf(double x);
int gsl_sf_fermi_dirac_half_e(double x,double* result);
double gsl_sf_fermi_dirac_half(double x);
int gsl_sf_fermi_dirac_3half_e(double x,double* result);
double gsl_sf_fermi_dirac_3half(double x);
int gsl_sf_fermi_dirac_inc_0_e(double x,double b,double* result);
double gsl_sf_fermi_dirac_inc_0(double x,double b);